--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                     </div>
                 </div>
 
-                <form id="questionnaire-form">
+                <form id="questionnaire-form" data-netlify="true" name="questionnaire">
                     <div class="step active">
                         <div class="bg-card rounded-2xl shadow-lg p-6 md:p-8">
                             <div class="flex items-center mb-6">
@@ -769,7 +769,7 @@
                 <div class="grid md:grid-cols-2 gap-8 md:gap-12">
                     <div class="bg-card rounded-2xl shadow-sm p-8 animate-on-scroll">
                         <h2 class="text-2xl font-bold font-display mb-6">Send us a Message</h2>
-                        <form id="contact-form" class="space-y-6">
+                        <form id="contact-form" class="space-y-6" data-netlify="true" name="contact">
                             <div><label for="contact-name" class="block text-sm font-medium mb-2">Your Name *</label><input id="contact-name" name="name" type="text" class="w-full p-3 border border-border rounded-lg bg-background" required></div>
                             <div><label for="contact-email" class="block text-sm font-medium mb-2">Email Address *</label><input id="contact-email" name="email" type="email" class="w-full p-3 border border-border rounded-lg bg-background" required></div>
                             <div><label for="contact-message" class="block text-sm font-medium mb-2">Message *</label><textarea id="contact-message" name="message" class="w-full p-3 border border-border rounded-lg h-32 bg-background" required></textarea></div>
