--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
             </a>
             
             <nav class="hidden lg:flex items-center space-x-1">
-                <a href="#" onclick="showPage('home')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Home</a>
-                <a href="#" onclick="showPage('about')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">About Me</a>
-                <a href="#" onclick="showPage('questionnaire')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Questionnaire</a>
-                <a href="#" onclick="showPage('pricing')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Pricing</a>
-                <a href="#" onclick="showPage('success-stories')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Success Stories</a>
-                <a href="#" onclick="showPage('contact')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Contact</a>
+                <a href="#home" onclick="showPage('home')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Home</a>
+                <a href="#about" onclick="showPage('about')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">About Me</a>
+                <a href="#questionnaire" onclick="showPage('questionnaire')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Questionnaire</a>
+                <a href="#pricing" onclick="showPage('pricing')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Pricing</a>
+                <a href="#success-stories" onclick="showPage('success-stories')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Success Stories</a>
+                <a href="#contact" onclick="showPage('contact')" class="px-3 py-2 rounded-md text-sm font-medium text-muted-foreground hover:bg-secondary transition-all duration-200">Contact</a>
             </nav>
             
             <div class="hidden lg:flex items-center">
