--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </div>
 
     <!-- Questionnaire Page -->
-    <div id="questionnaire" class="page">
+    <div id="#questionnaire" class="page">
         <section class="container mx-auto px-4 py-12 md:py-16">
             <div class="max-w-4xl mx-auto">
                 <div class="text-center mb-12">
