--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </div>
 
     <!-- Questionnaire Page -->
-    <div id="#questionnaire" class="page">
+    <div id="questionnaire" class="page">
         <section class="container mx-auto px-4 py-12 md:py-16">
             <div class="max-w-4xl mx-auto">
                 <div class="text-center mb-12">
@@ -721,7 +721,7 @@
     </div>
 
     <!-- Success Stories Page -->
-    <div id="success-stories" class="page">
+    <div id="#success-stories" class="page">
         <section class="container mx-auto px-4 py-16 md:py-24">
             <div class="text-center mb-12 animate-on-scroll">
                 <h1 class="text-3xl md:text-4xl font-bold font-display mb-4">Real Women, Real Transformations</h1>
@@ -782,14 +782,14 @@
                             <i class="fas fa-envelope text-primary text-2xl mr-4 mt-1"></i>
                             <div>
                                 <h3 class="font-semibold text-lg">Email</h3>
-                                <a href="mailto:hello@empowerfit.com" class="text-muted-foreground hover:text-primary">hello@empowerfit.com</a>
+                                <a href="mailto: nathanhevalier@gmail.com" class="text-muted-foreground hover:text-primary">nathanhevalier@gmail.com</a>
                             </div>
                         </div>
                         <div class="flex items-start">
                             <i class="fas fa-phone text-primary text-2xl mr-4 mt-1"></i>
                             <div>
                                 <h3 class="font-semibold text-lg">Phone</h3>
-                                <p class="text-muted-foreground">(555) 123-4567</p>
+                                <p class="text-muted-foreground">not available yet </p>
                             </div>
                         </div>
                         <div class="flex items-start">
