--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@
             <div>
                 <h4 class="font-semibold text-lg mb-4">Contact</h4>
                 <ul class="space-y-2 text-sm">
-                    <li><a href="mailto:hello@empowerfit.com" class="text-muted-foreground hover:text-primary">hello@empowerfit.com</a></li>
-                    <li><p class="text-muted-foreground">New York, NY</p></li>
+                    <li><a href="mailto: nathanhevalier@gmail.com" class="text-muted-foreground hover:text-primary">nathanhevalier@gmail.com</a></li>
+                    <li><p class="text-muted-foreground">Manchester, UK</p></li>
                 </ul>
             </div>
         </div>
