--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="hidden md:block animate-on-scroll">
-                    <img src="https://images.unsplash.com/photo-1581009146145-b5ef050c2e1e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                    <img src="https://images.app.goo.gl/QkhJg" 
                          alt="Confident woman exercising with battle ropes"
                          data-ai-hint="woman fitness battle ropes"
                          class="w-full rounded-2xl shadow-xl">
