--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="hidden md:block animate-on-scroll">
-                    <img src="https://images.app.goo.gl/QkhJg" 
+                    <img src="d6c08e195fb3288597b985.69596213_.jpg" 
                          alt="Confident woman exercising with battle ropes"
                          data-ai-hint="woman fitness battle ropes"
                          class="w-full rounded-2xl shadow-xl">
