--- a/index.html
+++ b/index.html
@@ -1447,14 +1447,16 @@
                             headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                             body: new URLSearchParams(formData).toString()
                         })
-                            .then(res => res.json())
-                            .then(resData => {
-                                console.log('Success:', resData);
-                                document.getElementById('questionnaire-form').classList.add('hidden');
-                                document.getElementById('navigation-buttons').classList.add('hidden');
-                                document.getElementById('confirmation-screen').classList.remove('hidden');
-                                stepIndicators.forEach(wrapper => wrapper.querySelector('.step-indicator').classList.add('completed'));
-                                document.getElementById('confirmation-screen').scrollIntoView({ behavior: 'smooth', block: 'start' });
+                            .then(res => {
+                                if (res.ok) {
+                                    document.getElementById('questionnaire-form').classList.add('hidden');
+                                    document.getElementById('navigation-buttons').classList.add('hidden');
+                                    document.getElementById('confirmation-screen').classList.remove('hidden');
+                                    stepIndicators.forEach(wrapper => wrapper.querySelector('.step-indicator').classList.add('completed'));
+                                    document.getElementById('confirmation-screen').scrollIntoView({ behavior: 'smooth', block: 'start' });
+                                } else {
+                                    alert('There was an error submitting your questionnaire. Please try again later.');
+                                }
                             })
                             .catch(error => {
                                 console.error('Error:', error);
