--- a/index.html
+++ b/index.html
@@ -1332,8 +1332,8 @@
                                 <i class="fas fa-envelope text-primary text-2xl mr-4 mt-1"></i>
                                 <div>
                                     <h3 class="font-semibold text-lg">Email</h3>
-                                    <a href="mailto: nathanhevalier@gmail.com"
-                                        class="text-muted-foreground hover:text-primary">nathanhevalier@gmail.com</a>
+                                    <a href="mailto:empowerfitwork@gmail.com"
+                                        class="text-muted-foreground hover:text-primary"empowerfitwork@gmail.com</a>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -1513,8 +1513,8 @@
                 <div>
                     <h4 class="font-semibold text-lg mb-4">Contact</h4>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="mailto: nathanhevalier@gmail.com"
-                                class="text-muted-foreground hover:text-primary">nathanhevalier@gmail.com</a></li>
+                        <li><a href="mailto: empowerfitwork@gmail.com"
+                                class="text-muted-foreground hover:text-primary"empowerfitwork@gmail.com</a></li>
                         <li>
                             <p class="text-muted-foreground">Manchester,
                                 UK</p>
