--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                                 <div>
                                     <h3 class="font-semibold text-lg">Email</h3>
                                     <a href="mailto:empowerfitwork@gmail.com"
-                                        class="text-muted-foreground hover:text-primary"empowerfitwork@gmail.com</a>
+                                        class="text-muted-foreground hover:text-primary"> empowerfitwork@gmail.com</a>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -1514,7 +1514,7 @@
                     <h4 class="font-semibold text-lg mb-4">Contact</h4>
                     <ul class="space-y-2 text-sm">
                         <li><a href="mailto: empowerfitwork@gmail.com"
-                                class="text-muted-foreground hover:text-primary"empowerfitwork@gmail.com</a></li>
+                                class="text-muted-foreground hover:text-primary">empowerfitwork@gmail.com</a></li>
                         <li>
                             <p class="text-muted-foreground">Manchester,
                                 UK</p>
