--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="animate-on-scroll">
                         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold font-display mb-6 leading-tight">
-                            Become the Best Version of You — <span class="text-primary">Physically</span> & <span class="text-accent">Mentally</span>.
+                            Become the Best Version of You Â— <span class="text-primary">Physically</span> & <span class="text-accent">Mentally</span>.
                         </h1>
                         <p class="text-lg text-muted-foreground mb-8">
                             Transform your body, mind, and spirit with personalized coaching designed specifically for ambitious women.
@@ -487,7 +487,7 @@
                             At EmpowerFit, our mission is to empower women to build strength from the inside out. We believe true wellness is a synergy of physical vitality, mental clarity, and emotional balance. We're not just about workouts; we're about building a lifestyle that you love, one that makes you feel powerful, confident, and truly alive.
                         </p>
                         <p class="text-lg text-muted-foreground">
-                            Founded by us, Moussa and Nathan, we saw a need for a more integrated approach to women's health—one that honors the unique physiological and psychological needs of women.
+                            Founded by us, Moussa and Nathan, we saw a need for a more integrated approach to women's healthÂ—one that honors the unique physiological and psychological needs of women.
                         </p>
                     </div>
                 </div>
@@ -1030,7 +1030,7 @@
                             <img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="After transformation" data-ai-hint="woman fitness after" class="w-full h-64 object-cover">
                         </div>
                         <div class="p-8">
-                            <blockquote class="text-lg text-muted-foreground mb-6">"I lost 28 pounds in 5 months—something I never thought possible. The combination of strength training and mindset coaching completely changed my relationship with food and exercise."</blockquote>
+                            <blockquote class="text-lg text-muted-foreground mb-6">"I lost 28 pounds in 5 monthsÂ—something I never thought possible. The combination of strength training and mindset coaching completely changed my relationship with food and exercise."</blockquote>
                             <div class="font-semibold">Sarah Mitchell, 34</div>
                         </div>
                     </div>
@@ -1509,3 +1509,4 @@
 </body>
 
 </html>
+
