--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div id="mobile-menu" class="lg:hidden mt-4 pt-4 border-t border-border hidden">
                 <nav class="flex flex-col space-y-2">
                     <a href="#home" onclick="showPage('home')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">Home</a>
-                    <a href="#about" onclick="showPage('about')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">About Me</a>
+                    <a href="#about" onclick="showPage('about')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">About Us</a>
                     <a href="#questionnaire" onclick="showPage('questionnaire')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">Questionnaire</a>
                     <a href="#pricing" onclick="showPage('pricing')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">Pricing</a>
                     <a href="#success-stories" onclick="showPage('success-stories')" class="px-3 py-2 rounded-md text-base font-medium hover:bg-secondary">Success Stories</a>
@@ -331,7 +331,7 @@
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div class="animate-on-scroll">
                         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold font-display mb-6 leading-tight">
-                            Become the Best Version of You  <span class="text-primary">Physically</span> & <span class="text-accent">Mentally</span>.
+                            Become the Best Version of You <span class="text-primary">Physically</span> & <span class="text-accent">Mentally</span>.
                         </h1>
                         <p class="text-lg text-muted-foreground mb-8">
                             Transform your body, mind, and spirit with personalized coaching designed specifically for ambitious women.
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="hidden md:block animate-on-scroll">
-                        <img src="https://gensparkstorageprodwest.blob.core.windows.net/personal/9dc966fe-4129-4188-b134-fa5e3c57ef10/upload/default/d6c08e195fb3288597b985.69596213_.jpg" alt="Confident woman exercising with battle ropes" data-ai-hint="woman fitness battle ropes" class="w-full rounded-2xl shadow-xl">
+                        <img src="d6c08e195fb3288597b985.69596213_.jpg" alt="Confident woman exercising with battle ropes" data-ai-hint="woman fitness battle ropes" class="w-full rounded-2xl shadow-xl">
                     </div>
                 </div>
             </section>
@@ -352,10 +352,13 @@
             <section id="meet-coaches" class="section-anchor container mx-auto px-4 py-16 md:py-24 bg-card rounded-2xl shadow-sm animate-on-scroll">
                 <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
                     <div class="order-2 md:order-1">
-                        <h2 class="text-3xl md:text-4xl font-bold font-display mb-4">Meet Moussa & Nathan</h2>
+                        <h2 class="text-3xl md:text-4xl font-bold font-display mb-4">About Us</h2>
                         <p class="text-muted-foreground mb-6">
                             With over 5 years of combined experience, we've developed a holistic approach that combines cutting-edge fitness strategies with mental wellness techniques to help you achieve lasting transformation.
                         </p>
+
+<img src="d6c08e195fb3288597b985.69596213_.jpg" alt="Confident woman exercising with battle ropes" data-ai-hint="woman fitness battle ropes" class="w-full rounded-2xl shadow-xl">
+
                     </div>
                 </div>
             </section>
@@ -1103,7 +1106,7 @@
                                 <i class="fab fa-instagram text-primary text-2xl mr-4 mt-1"></i>
                                 <div>
                                     <h3 class="font-semibold text-lg">Social</h3>
-                                    <a href="#" class="text-muted-foreground hover:text-primary">@empowerfit_coaching</a>
+                                    <a href="#" class="text-muted-foreground hover:text-primary">@empowerfit.app</a>
                                 </div>
                             </div>
                         </div>
