--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 <!-- Mission Section -->
                 <div id="mission" class="section-anchor grid md:grid-cols-2 gap-12 items-center mb-16">
                     <div class="rounded-2xl overflow-hidden shadow-xl animate-on-scroll">
-                        <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=800&h=900&fit=crop&crop=faces" alt="Moussa and Nathan portrait" data-ai-hint="coaches portrait" class="w-full h-full object-cover">
+                        <img src="epf0000.jpg" alt=" Coach in empowerfit" data-ai-hint="coaches portrait" class="w-full h-full object-cover">
                     </div>
                     <div class="animate-on-scroll" style="animation-delay: 0.2s;">
                         <h1 class="text-4xl md:text-5xl font-bold font-display mb-6">Our Mission</h1>
@@ -1592,3 +1592,4 @@
 </body>
 
 </html>
+
