--- a/index.html
+++ b/index.html
@@ -1021,8 +1021,8 @@
                     <!-- Sarah's Transformation -->
                     <div class="bg-card rounded-2xl shadow-sm overflow-hidden animate-on-scroll">
                         <div class="grid grid-cols-2">
-                            <img src="https://images.unsplash.com/photo-1558611848-16b34b0c2854?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Before transformation" data-ai-hint="woman fitness before" class="w-full h-64 object-cover">
-                            <img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="After transformation" data-ai-hint="woman fitness after" class="w-full h-64 object-cover">
+                            <img src="epf11.jpg" alt="Before transformation" data-ai-hint="woman fitness before" class="w-full h-64 object-cover">
+                            <img src="epf10.jpg" alt="After transformation" data-ai-hint="woman fitness after" class="w-full h-64 object-cover">
                         </div>
                         <div class="p-8">
                             <blockquote class="text-lg text-muted-foreground mb-6">"I lost 28 pounds in 5 monthssomething I never thought possible. The combination of strength training and mindset coaching completely changed my relationship with food and exercise."</blockquote>
@@ -1592,4 +1592,5 @@
 </body>
 
 </html>
+
 
