--- a/index.html
+++ b/index.html
@@ -1033,8 +1033,8 @@
                     <!-- Jennifer's Transformation -->
                     <div class="bg-card rounded-2xl shadow-sm overflow-hidden animate-on-scroll" style="animation-delay: 0.2s;">
                         <div class="grid grid-cols-2">
-                            <img src="https://images.unsplash.com/photo-1577221084712-45b044e07aa4?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Before transformation" data-ai-hint="woman lifestyle before" class="w-full h-64 object-cover">
-                            <img src="https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="After transformation" data-ai-hint="woman lifestyle after" class="w-full h-64 object-cover">
+                            <img src="epf21.jpg" alt="Before transformation" data-ai-hint="woman lifestyle before" class="w-full h-64 object-cover">
+                            <img src="epf20.jpg" alt="After transformation" data-ai-hint="woman lifestyle after" class="w-full h-64 object-cover">
                         </div>
                         <div class="p-8">
                             <blockquote class="text-lg text-muted-foreground mb-6">"Postpartum fitness looked different than I expected, but Moussa helped me build strength safely. More than the physical changes, I regained confidence in my body after having two kids."</blockquote>
@@ -1592,5 +1592,6 @@
 </body>
 
 </html>
+
 
 
